# OpenCV_Learn

./: .gitignore  1  CMakeLists.txt  CMakePresets.json  Calibration9Point.md  Calibration9PointCode.md  MarkApp.md  OpenCV_Learn.cpp  OpenCV_Learn.h  RCa09084  import_dll.cmake  main.cpp  resource.rc  标记定位需求.docx
OpenCV/modules/.firstpass/calib3d/: CTestTestfile.cmake  Makefile
OpenCV/modules/.firstpass/core/: cmake_install.cmake
OpenCV/modules/.firstpass/dnn/: Makefile
OpenCV/modules/.firstpass/features2d/: cmake_install.cmake
OpenCV/modules/.firstpass/flann/: CTestTestfile.cmake
OpenCV/modules/.firstpass/gapi/: CTestTestfile.cmake  cmake_install.cmake
OpenCV/modules/.firstpass/highgui/: Makefile  cmake_install.cmake
OpenCV/modules/.firstpass/imgcodecs/: CTestTestfile.cmake
OpenCV/modules/.firstpass/imgproc/: Makefile
OpenCV/modules/.firstpass/objdetect/: Makefile  cmake_install.cmake
OpenCV/modules/.firstpass/photo/: Makefile  cmake_install.cmake
OpenCV/modules/.firstpass/python/: CTestTestfile.cmake  cmake_install.cmake
OpenCV/modules/.firstpass/stitching/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/modules/.firstpass/video/: cmake_install.cmake
OpenCV/modules/.firstpass/videoio/: CTestTestfile.cmake
OpenCV/modules/.firstpass/world/: CTestTestfile.cmake  cmake_install.cmake
OpenCV/modules/calib3d/: CTestTestfile.cmake  cmake_install.cmake  opencv_perf_calib3d_pch_dephelp.cxx  undistort.sse2.cpp
OpenCV/modules/core/: Makefile  arithm.simd_declarations.hpp  convert_scale.simd_declarations.hpp  convert_scale.sse2.cpp  mathfuncs_core.simd_declarations.hpp  mathfuncs_core.sse2.cpp  matmul.simd_declarations.hpp  mean.avx2.cpp  mean.simd_declarations.hpp  merge.avx2.cpp  opencv_test_core_pch_dephelp.cxx  stat.avx2.cpp  stat.simd_declarations.hpp  sum.simd_declarations.hpp  version_string.inc  vs_version.rc
OpenCV/modules/core/test/: test_intrin128.fp16.cpp  test_intrin512.simd_declarations.hpp
OpenCV/modules/dnn/: cmake_install.cmake  opencv_perf_dnn_pch_dephelp.cxx  opencv_test_dnn_pch_dephelp.cxx
OpenCV/modules/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_test_features2d_pch_dephelp.cxx
OpenCV/modules/flann/: cmake_install.cmake  opencv_flann_pch_dephelp.cxx
OpenCV/modules/gapi/: CTestTestfile.cmake  opencv_gapi_pch_dephelp.cxx  opencv_test_gapi_pch_dephelp.cxx  vs_version.rc
OpenCV/modules/highgui/: opencv_test_highgui_pch_dephelp.cxx
OpenCV/modules/highgui/src/: moc_window_QT.cpp_parameters
OpenCV/modules/imgcodecs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_imgcodecs_pch_dephelp.cxx  opencv_perf_imgcodecs_pch_dephelp.cxx  vs_version.rc
OpenCV/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.sse4_1.cpp  bilateral_filter.avx2.cpp  bilateral_filter.simd_declarations.hpp  box_filter.sse4_1.cpp  color_hsv.sse4_1.cpp  color_rgb.sse4_1.cpp  color_yuv.simd_declarations.hpp  filter.simd_declarations.hpp  median_blur.simd_declarations.hpp  morph.sse4_1.cpp  opencv_perf_imgproc_pch_dephelp.cxx  smooth.simd_declarations.hpp  vs_version.rc
enc_temp_folder/3fdba67711d9cb80c6fff8b6582481/: ZDockTabContainer.cpp
enc_temp_folder/cad96c4aedc64f037db598a9777f73/: ZDockTabContainer.h
opencv2/install/include/opencv2/: imgproc.hpp
opencv2/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv2/modules/.firstpass/calib3d/: cmake_install.cmake
opencv2/modules/.firstpass/core/: CTestTestfile.cmake  Makefile
opencv2/modules/.firstpass/dnn/: CTestTestfile.cmake  cmake_install.cmake
opencv2/modules/.firstpass/features2d/: CTestTestfile.cmake  Makefile
opencv2/modules/.firstpass/flann/: Makefile  cmake_install.cmake
opencv2/modules/.firstpass/gapi/: Makefile
opencv2/modules/.firstpass/highgui/: CTestTestfile.cmake
opencv2/modules/.firstpass/imgcodecs/: Makefile  cmake_install.cmake
opencv2/modules/.firstpass/imgproc/: CTestTestfile.cmake  cmake_install.cmake
opencv2/modules/.firstpass/java/: CTestTestfile.cmake  Makefile  cmake_install.cmake
opencv2/modules/calib3d/: Makefile  opencv_calib3d_pch_dephelp.cxx  opencv_test_calib3d_pch_dephelp.cxx  undistort.simd_declarations.hpp  vs_version.rc
opencv2/modules/core/: CTestTestfile.cmake  arithm.avx2.cpp  cmake_install.cmake  convert.avx2.cpp  convert.simd_declarations.hpp  count_non_zero.avx2.cpp  count_non_zero.simd_declarations.hpp  matmul.avx2.cpp  merge.simd_declarations.hpp  opencv_core_pch_dephelp.cxx  opencv_perf_core_pch_dephelp.cxx  split.avx2.cpp  split.simd_declarations.hpp  sum.sse2.cpp
opencv2/modules/dnn/: CTestTestfile.cmake  Makefile  opencv_dnn_pch_dephelp.cxx  vs_version.rc
opencv2/modules/features2d/: opencv_features2d_pch_dephelp.cxx  opencv_perf_features2d_pch_dephelp.cxx  vs_version.rc
opencv2/modules/flann/: CTestTestfile.cmake  Makefile  opencv_test_flann_pch_dephelp.cxx  vs_version.rc
opencv2/modules/gapi/: Makefile  cmake_install.cmake  opencv_perf_gapi_pch_dephelp.cxx
opencv2/modules/highgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake  opencv_highgui_pch_dephelp.cxx  qrc_window_QT.cpp  vs_version.rc
opencv2/modules/imgcodecs/: opencv_test_imgcodecs_pch_dephelp.cxx
opencv2/modules/imgproc/: accum.simd_declarations.hpp  box_filter.simd_declarations.hpp  cmake_install.cmake  color_hsv.simd_declarations.hpp  color_rgb.simd_declarations.hpp  color_yuv.sse2.cpp  filter.sse2.cpp  median_blur.sse2.cpp  morph.simd_declarations.hpp  opencv_imgproc_pch_dephelp.cxx  opencv_test_imgproc_pch_dephelp.cxx  smooth.sse2.cpp
res/: action.qrc
src/cv/: matchalgorithm.cpp  matchalgorithm.h  picture_analyze.cpp  picture_analyze.h
src/cv/Matcher/: SubMatcher.cpp  SubMatcher.h  TemplateMatcher.cpp  TemplateMatcher.h
src/cv/calibration/: NinePoint.cpp  NinePoint.h
src/cv/zhang/: Z_CV_lib.cpp  Z_CV_lib.h
src/gui/job/: JobBlock.cpp  JobBlock.h  JobConfig.cpp  JobConfig.h  JobTree.cpp  JobTree.h
src/gui/main/: output_widget.cpp  output_widget.h
src/gui/zhang/: ZDockTabContainer.cpp  ZDockTabContainer.h  ZMainWindow.cpp  ZMainWindow.h
(+41 files in other folders)
